[project]
name = "deepdivescholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "instructorembedding>=1.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
]
